# t_tenzor

./: README.md  conftest.py  pyproject.toml
pages/: base.py  elements.py  sbis_ru.py
tests/: test_first_script.py  test_second_script.py  test_third_script.py
